# Embedded-project-Q2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
3D files/: ExtArbreBase.STL  ExtFinalArbre.STL  FREDDY_Mât.STL  PLATF2.STL  Plaque Ultrason.STL  SupportIRv2.STL  Tube15.STL
Groupies/: Groupies.ino  Motors.cpp  Motors.h  PID.cpp  Sensors.cpp  Sensors.h  main.cpp
SuperStar/: Motors.cpp  Motors.h  PID.h  Sensors.cpp  Sensors.h  SuperStar.ino  main.cpp
SuperStar/lib/: Motors.h
Test/: MotorsTest.cpp  PIDTest.cpp
lib/: Motors.cpp  Sensors.cpp  Sensors.h
